# wordle-solver

./: Cargo.toml  README.md  build.rs
src/: algorithms.rs  lib.rs  main.rs  solver.rs
src/algorithms/: allocs.rs  cache.rs  cutoff.rs  enumerate.rs  once_init.rs  prune.rs  unoptimised.rs  vecrem.rs  weight.rs
