[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
clap = { version = "3", features = ["derive"] }
mimalloc = "0.1.29"
once_cell = "1"